# adam.remaki.github.io

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: gh-pages.yml
docs/: index.md  publications.md  references.bib  software.md  softwares.md  teaching.md
docs/assets/stylesheets/: extra.css
scripts/: generate_publications.py
