[project]
name = "adam.remaki.github.io"
version = "0.1.0"
description = "My personal website built with MkDocs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-eds @ git+https://github.com/percevalw/mkdocs-eds.git@main#egg=mkdocs-eds",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocstrings>=0.30.0",
    "pip>=25.2",
    "pret-joy",
    "pybtex<=0.24.0",
    "pymdown-extensions>=10.16.1",
    "setuptools>=80.9.0",
]
